fix shadow on safari

--- a/_sass/_scaffolding.scss
+++ b/_sass/_scaffolding.scss
@@ -5,13 +5,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   width: 100%;
-  height: 100%;
-  color: $grey;
-}
-
-html {
   max-width: 1700px;
+  height: 100%;
   margin: 0 auto;
+  color: $grey;
 
   @media only screen and 
   (min-width: 1701px) {
